# CSS_project-19

./: .gitignore  AI-USAGE.md  CONTRIBUTING.md  README.md  config.py  content.py  main.py  main.py.bak  pyproject.toml
data/: __init__.py
data/RQ3/experiment_1/: fires_param1_L256_p0.01_f1e-05_steps1000_id1_20260122T192548Z.csv  summary_20260122T192548Z.csv
data/RQ3/experiment_2/: fires_param1_L256_p0.01_f0.0001_steps1000_id1_20260122T192626Z.csv  summary_20260122T192626Z.csv
data/RQ3/experiment_3/: fires_param1_L256_p0.01_f0.001_steps1000_id1_20260122T192700Z.csv  summary_20260122T192701Z.csv
data/RQ3/experiment_4/: fires_param1_L256_p0.01_f0.01_steps1000_id1_20260122T192729Z.csv  summary_20260122T192730Z.csv
data/RQ3/experiment_5/: fires_param1_L256_p0.01_f0.1_steps1000_id1_20260122T192745Z.csv  summary_20260122T192746Z.csv
notebooks/: InhomogenousRandom.ipynb  InhomogenousSlime.ipynb  RQ2.ipynb  TaskIJsbrandQ3.ipynb  TaskRohanRQ1.ipynb  TaskRohanRQ3.2.ipynb  TaskRohanRQ3.ipynb  data_analysis.ipynb  data_analysis1.ipynb  drosselschwab.ipynb  f over p.ipynb  f_param.ipynb  p_param_2.ipynb  p_sweep.ipynb  utils.py
results/: __init__.py
scripts/: Experiment3.sh  analyze_experiment.py  fix_summary_perstep.py  inspect_sim.py  parallel_sims.py  parallel_spatial.py  run_worker_test.py  test_sim.py
scriptss/: parallel_sims_rq3.py
simulations/: __init__.py  drosselschwab.py  inhomogeneous.py  spatial.py
src/: __init__.py  drosselschwab.py  rq1.py  rq3.py  slimemold.py
wildfires.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+702 files in other folders)
