[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfires"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nicegui>=3.6.0",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "latex2mathml>=3.78.1",
    "pandas>=3.0.0",
]

[tool.setuptools]
packages = ["simulations", "src", "data","results","scripts"]

[tool.setuptools.package-data]
"*" = ["*.py"]
